<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="visible"
    tools:context=".MainActivity"
    tools:visibility="visible">

    <Button
        android:id="@+id/expense"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/main_button_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view_button" />

    <Button
        android:id="@+id/income"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:layout_marginLeft="3dp"
        android:layout_marginBottom="8dp"
        android:text="@string/main_button_2"
        app:layout_constraintBottom_toTopOf="@+id/transfer_button"
        app:layout_constraintStart_toStartOf="@+id/expense" />

    <Button
        android:id="@+id/category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/main_button_3"
        app:layout_constraintEnd_toEndOf="@+id/transfer_button"
        app:layout_constraintTop_toBottomOf="@+id/transfer_button" />

    <Button
        android:id="@+id/report"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="12dp"
        android:text="@string/main_button_4"
        app:layout_constraintBottom_toTopOf="@+id/db_manager"
        app:layout_constraintEnd_toEndOf="@+id/db_manager" />

    <Button
        android:id="@+id/transfer_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:text="@string/main_button_5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/expense" />

    <Button
        android:id="@+id/wallet_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="9dp"
        android:layout_marginLeft="9dp"
        android:layout_marginBottom="10dp"
        android:text="@string/main_button_6"
        app:layout_constraintBottom_toTopOf="@+id/category"
        app:layout_constraintStart_toStartOf="@+id/category" />

    <Button
        android:id="@+id/view_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="13dp"
        android:layout_marginLeft="13dp"
        android:layout_marginTop="26dp"
        android:text="@string/main_button_7"
        app:layout_constraintStart_toStartOf="@+id/expense"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/db_manager"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="73dp"
        android:text="@string/main_button_db_manager"
        app:layout_constraintStart_toStartOf="@+id/category"
        app:layout_constraintTop_toBottomOf="@+id/category" />

    <TextView
        android:id="@+id/trigger"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginBottom="21dp"
        android:text="@string/main_button_json"
        app:layout_constraintBottom_toTopOf="@+id/dbclear"
        app:layout_constraintEnd_toEndOf="@+id/dbclear" />

    <TextView
        android:id="@+id/dbclear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="72dp"
        android:text="@string/main_button_clear_db"
        app:layout_constraintStart_toStartOf="@+id/db_manager"
        app:layout_constraintTop_toBottomOf="@+id/db_manager" />

</androidx.constraintlayout.widget.ConstraintLayout>