<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ReportActivity">

    <Button
        android:id="@+id/all_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:text="@string/report_button_all_time"
        app:layout_constraintBaseline_toBaselineOf="@+id/today"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/today"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/report_button_today"
        app:layout_constraintStart_toEndOf="@+id/all_time"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/apply_filter"
        tools:ignore="SpeakableTextPresentCheck">

        <TableLayout
            android:id="@+id/report"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="0dp"
            android:stretchColumns="*"></TableLayout>
    </ScrollView>

    <TextView
        android:id="@+id/report_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:text=""
        app:layout_constraintBottom_toTopOf="@+id/scrollView2"
        app:layout_constraintStart_toEndOf="@+id/date_next" />

    <TextView
        android:id="@+id/log_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text=""
        app:layout_constraintEnd_toEndOf="@+id/all_time"
        app:layout_constraintStart_toEndOf="@+id/all_time"
        app:layout_constraintTop_toBottomOf="@+id/all_time" />

    <TextView
        android:id="@+id/date_previous"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="10dp"
        android:text="@string/report_button_prev"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/all_time" />

    <TextView
        android:id="@+id/date_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="7dp"
        android:layout_marginRight="7dp"
        android:text="@string/report_button_next"
        app:layout_constraintEnd_toEndOf="@+id/today"
        app:layout_constraintTop_toBottomOf="@+id/today" />

    <Button
        android:id="@+id/apply_filter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="13dp"
        android:text="@string/report_button_apply_filter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/date_previous" />

</androidx.constraintlayout.widget.ConstraintLayout>