<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CategoryActivity">


    <Spinner
        android:id="@+id/category_spinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="60dp"
        app:layout_constraintBottom_toTopOf="@+id/heading_3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/new_category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/ok_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@android:string/ok"
        app:layout_constraintBaseline_toBaselineOf="@+id/cancel_button"
        app:layout_constraintStart_toStartOf="@+id/new_category" />

    <Button
        android:id="@+id/cancel_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="37dp"
        android:layout_marginLeft="37dp"
        android:layout_marginTop="45dp"
        android:text="@android:string/cancel"
        app:layout_constraintStart_toEndOf="@+id/ok_button"
        app:layout_constraintTop_toBottomOf="@+id/new_category" />

    <TextView
        android:id="@+id/heading_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="29dp"
        android:layout_marginLeft="29dp"
        android:layout_marginTop="45dp"
        android:text="@string/category_heading_1"
        app:layout_constraintStart_toStartOf="@+id/radio_group"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/heading_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="29dp"
        android:layout_marginLeft="29dp"
        android:layout_marginBottom="18dp"
        android:text="@string/category_heading_2"
        app:layout_constraintBottom_toTopOf="@+id/category_spinner"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/heading_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="19dp"
        android:layout_marginLeft="19dp"
        android:layout_marginBottom="28dp"
        android:text="@string/category_heading_3"
        app:layout_constraintBottom_toTopOf="@+id/new_category"
        app:layout_constraintStart_toStartOf="@+id/new_category" />

    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="0dp"
        android:layout_height="37dp"
        android:layout_marginStart="70dp"
        android:layout_marginLeft="70dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="70dp"
        android:layout_marginRight="70dp"
        android:layout_marginBottom="99dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="@+id/category_spinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/heading_2"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/income_radio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/income_radio" />

        <RadioButton
            android:id="@+id/expense_radio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/expense_radio" />
    </RadioGroup>


</androidx.constraintlayout.widget.ConstraintLayout>